syntax = "proto3";


message ScalarMessage {
    double f_double = 1;
    float f_float = 2;
    int32 f_int32 = 3;
    int64 f_int64 = 4;
    uint32 f_uint32 = 5;
    uint64 f_uint64 = 6;
    sint32 f_sint32 = 7;
    sint64 f_sint64 = 8;
    fixed32 f_fixed32 = 9;
    fixed64 f_fixed64 = 10;
    sfixed32 f_sfixed32 = 11;
    sfixed64 f_sfixed64 = 12;
    bool f_bool = 13;
    string f_string = 14;
    bytes f_bytes = 15;
    int32 f_large_tag = 1000;
}
